  * Display HTML links of the form "[http://example.com]" using numbered links
    instead of the URL, which matches Mediawiki behavior.  The legacy behavior
    can be restored from the "Parser" tab of the Special:Admin page.
  * Automatically display virtual wiki links in the left nav for the
    Special:RecentChanges page.  This feature may be disabled from admin pages.
  * Add support for the universal edit button plugin.  See 
    http://universaleditbutton.org for further details.
  * Add experimental support for custom parser tags for the JFlex parser.
  * Enable DBCP prepared statement pooling to improve performance.
  * Reduce the number of fields presented to users on the Special:Account page
    when creating an account.
  * Remove ability to automatically upgrade from versions prior to 0.9.0.
  * Add RankingAlgorithm search engine support (nnagarajayya).
  * Limit the number of recent changes loaded by the "Reload Recent Changes"
    task on the Special:Maintenance page to improve performance.
  * Include common virtual wiki and interwiki options on both the Special:Admin
    and Special:VirtualWiki pages.  Requested by floatingworld.
  * Special:Export no longer converts namespaces to the Mediawiki namespace for
    performance reasons.  Namespaces will still be converted on import.
  * Upgrade to HSQLDB 2.2.4.
  * Upgrade to Lucene Search 3.3.
  * Upgrade to Ehcache 2.4.2.
  * Upgrade to commons-codec 1.5.
  * Upgrade to commons-dbcp-1.3.
  * Upgrade to commons-lang 2.6.
  * Upgrade to commons-pool 1.5.6.

Bugfixes:

  * Interwiki link CSS should match internal link CSS, not external link CSS,
    and if no link text is specified the default text should display the
    interwiki prefix.  Reported by floatingworld.
  * Fix category redirects of the form "#REDIRECT [[Category:Example]]".
  * Custom authentication providers did not work during upgrades.  Reported by
    Torsten Krah.